subplots in figure on frame (slower), add mov_avg

--- a/pogona_visualize.ipynb
+++ b/pogona_visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detector initiated successfully\n"
+     ]
+    }
+   ],
    "source": [
     "detector = Detector_v4()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +48,7 @@
        "<module 'Detector.visualize' from '/app/Pogona_Pursuit/Detector/visualize.py'>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,6 @@
    ],
    "source": [
     "NUM_FRAMES = 3000\n",
-    "\n",
     "d = visualize.save_pred_video(test_video_path, \n",
     "                              \"labelled/1506_175044_dots.mp4\", \n",
     "                              detector,num_frames=NUM_FRAMES, \n",
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,16 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cents_17 = np.load('cents_175044.npy')\n",
+    "cents_18 = np.load('cents_181757.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/app/Pogona_Pursuit/Detector/visualize.py:502: RuntimeWarning: invalid value encountered in greater\n",
-      "  veloc = np.apply_along_axis(np.linalg.norm,1,veloc)\n",
-      "  0%|          | 0/3000 [00:00<?, ?it/s]"
+      "  0%|          | 3/3000 [00:00<02:40, 18.67it/s]"
      ]
     },
     {
@@ -178,16 +193,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [02:45<00:00, 18.13it/s]\n"
+      "100%|██████████| 3000/3000 [04:53<00:00, 10.23it/s]\n"
      ]
     }
    ],
    "source": [
     "%matplotlib agg\n",
     "imp.reload(visualize)\n",
+    "test_video_path = \"./Arena/output/20200615-175044/19506481.avi\"\n",
     "visualize.plot_with_figure(input_name=test_video_path,\n",
-    "                           output_name='labelled/1506_181757_with_fig.mp4',\n",
-    "                           centroids=d_vid_181757[1],\n",
+    "                           output_name='labelled/1506_175044_fig_over_subs.mp4',\n",
+    "                           centroids=cents_17,\n",
     "                           num_frames=3000)"
    ]
   },
