LSTM prediction first and other stuff

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
    ],
    "source": [
     "imp.reload(detector)\n",
-    "detector = detector.Detector_v4()"
+    "det = detector.Detector_v4()"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "imp.reload(predictor)\n",
     "traj_predictor = predictor.ConstantVelocityKalmanPredictor(forecast_horizon=60)\n",
-    "p = predictor.HitPredictor(traj_predictor, detector, history_size=5288)"
+    "p = predictor.HitPredictor(traj_predictor, det, history_size=5288)"
    ]
   },
   {
@@ -279,7 +279,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -772,6 +776,212 @@
    "source": [
     "class DarknetLayer(ctypes.Structure):\n",
     "    _fields_ = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data for Pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from Prediction import dataset\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import imp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Prediction.LSTM_predict import LSTMdense, create_dataloader, TrajectoriesData, train_RED\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'Prediction.dataset' from '/app/Pogona_realtime/Prediction/dataset.py'>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp.reload(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imp.reload(Prediction.LSTM_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Data/all_exper.p','rb') as f:\n",
+    "    d = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_df = dataset.get_unified_df(d,mult=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp_labels = ['centroid_x', 'centroid_y']\n",
+    "out_labels = ['centroid_x', 'centroid_y']\n",
+    "inp_seq = 16\n",
+    "out_seq = 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor_list_X, tensor_list_Y = [], []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/miniconda/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:2: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "for trial in all_df.index.unique():\n",
+    "    X, Y = dataset.trial_to_samples(all_df.loc[trial], input_labels = inp_labels,\n",
+    "                                   output_labels=out_labels, input_seq_size=inp_seq,\n",
+    "                                   output_seq_size=out_seq)\n",
+    "    tensor_list_X.append(X)\n",
+    "    tensor_list_Y.append(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_X = torch.cat(tensor_list_X)\n",
+    "all_Y = torch.cat(tensor_list_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader, test_dataloader = create_dataloader(all_X, all_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = LSTMdense(2,2,out_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, loss: 189652479.188, epoch time: 2.149\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 0, Test set mean ADE 914.862\n",
+      "epoch: 20, loss: 5038261.917, epoch time: 2.155\n",
+      "epoch: 40, loss: 3848388.756, epoch time: 2.147\n",
+      "epoch: 60, loss: 2965263.718, epoch time: 2.191\n",
+      "epoch: 80, loss: 2274006.150, epoch time: 2.174\n",
+      "epoch: 100, loss: 1728583.420, epoch time: 2.190\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 100, Test set mean ADE 55.437\n",
+      "epoch: 120, loss: 1316163.949, epoch time: 2.197\n",
+      "epoch: 140, loss: 1008241.653, epoch time: 2.165\n",
+      "epoch: 160, loss: 764674.887, epoch time: 2.155\n",
+      "epoch: 180, loss: 588913.631, epoch time: 2.196\n",
+      "epoch: 200, loss: 456560.542, epoch time: 2.147\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 200, Test set mean ADE 24.189\n",
+      "epoch: 220, loss: 376047.409, epoch time: 2.276\n",
+      "epoch: 240, loss: 292800.962, epoch time: 2.270\n",
+      "epoch: 260, loss: 235250.983, epoch time: 2.281\n",
+      "epoch: 280, loss: 191436.057, epoch time: 2.259\n",
+      "epoch: 300, loss: 157787.473, epoch time: 2.267\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 300, Test set mean ADE 13.761\n",
+      "epoch: 320, loss: 144823.376, epoch time: 2.170\n",
+      "epoch: 340, loss: 119775.543, epoch time: 2.191\n",
+      "epoch: 360, loss: 95275.761, epoch time: 2.146\n",
+      "epoch: 380, loss: 81250.498, epoch time: 2.151\n",
+      "epoch: 400, loss: 70520.097, epoch time: 2.180\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 400, Test set mean ADE 9.021\n",
+      "epoch: 420, loss: 62271.877, epoch time: 2.254\n",
+      "epoch: 440, loss: 55423.119, epoch time: 2.275\n",
+      "epoch: 460, loss: 50004.184, epoch time: 2.256\n",
+      "epoch: 480, loss: 45646.735, epoch time: 2.308\n",
+      "epoch: 500, loss: 42099.052, epoch time: 2.298\n",
+      "++++++++++++++++\n",
+      "Eval epoch: 500, Test set mean ADE 7.109\n",
+      "epoch: 520, loss: 39115.515, epoch time: 2.158\n",
+      "epoch: 540, loss: 36500.254, epoch time: 2.199\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_RED(net, train_dataloader, test_dataloader, 2000, 'Prediction/RED_models/', eval_freq=100)"
    ]
   }
  ],
