fix undistort point and data; add resize to process_video; fix 2d kalman predictor

--- a/Arena/predictor.ipynb
+++ b/Arena/predictor.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "#os.chdir(\"Arena\")\n",
+    "os.chdir(\"Arena\")\n",
     "\n",
     "from Prediction import predictor\n",
     "from Prediction import visualize\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,13 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -289,12 +284,22 @@
       "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T205501, ignored word\n",
       "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T205741, ignored word\n",
       "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T210457, ignored word\n",
+      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200830T105934, ignored word\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_line_20200830T115811 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_line_20200830T120130 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T120451 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T121513 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T121825 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_circle_20200830T122241 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T122932 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_circle_20200830T123508 trial1\n",
+      "did not find files in ../../Pogona_Pursuit/Arena/experiments/beetle_fast_line_20200830T124020 trial1\n",
       "Finished, loaded 25 trials\n"
      ]
     }
    ],
    "source": [
-    "all_df = dataset.get_unified_dataframe((1440,1080), multi_index=True)\n",
+    "all_df = dataset.get_unified_dataframe((1440,1080), multi_index=True, to_correct=True)\n",
     "results = []\n",
     "\n",
     "exclude_trials = [\n",
@@ -311,41 +316,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([('circle_20200803T120911', 1),\n",
-       "  ('circle_20200803T084529', 2),\n",
-       "  ('circle_20200803T121730', 1),\n",
-       "  ('line_20200803T095401', 1),\n",
-       "  ('circle_20200803T092248', 1),\n",
-       "  ('line_20200803T094928', 1),\n",
-       "  ('fast_line_20200803T082724', 1),\n",
+       "([('circle_20200803T090615', 1),\n",
        "  ('line_20200803T114942', 1),\n",
-       "  ('line_20200803T122506', 1),\n",
-       "  ('circle_20200803T113121', 1),\n",
-       "  ('circle_20200803T084227', 1),\n",
-       "  ('fast_line_20200803T082414', 1),\n",
-       "  ('circle_20200803T093051', 1),\n",
-       "  ('circle_20200803T090234', 1),\n",
        "  ('circle_20200803T091639', 1),\n",
-       "  ('circle_20200803T090615', 1)],\n",
-       " [('circle_20200803T084529', 1),\n",
+       "  ('circle_20200803T090234', 1),\n",
        "  ('fast_cockroach_20200803T085738', 1),\n",
+       "  ('circle_20200803T084227', 1),\n",
+       "  ('line_20200803T095401', 1),\n",
+       "  ('line_20200803T081429', 1),\n",
+       "  ('fast_line_20200803T082724', 1),\n",
+       "  ('line_20200803T122506', 1),\n",
+       "  ('circle_20200803T121730', 1),\n",
+       "  ('circle_20200803T092248', 1),\n",
        "  ('circle_20200803T115839', 1),\n",
-       "  ('line_20200803T081429', 1)],\n",
+       "  ('circle_20200803T113121', 1),\n",
+       "  ('circle_20200803T120911', 1),\n",
+       "  ('line_20200803T094928', 1)],\n",
+       " [('circle_20200803T084529', 1),\n",
+       "  ('fast_line_20200803T082414', 1),\n",
+       "  ('circle_20200803T084529', 2),\n",
+       "  ('circle_20200803T093051', 1)],\n",
        " [])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,9 +361,9 @@
    "outputs": [],
    "source": [
     "results=[]\n",
-    "input_labels = ['cent_x', 'cent_y', 'w', 'h']\n",
+    "input_labels = ['x1', 'y1', 'x2', 'y2']\n",
     "\n",
-    "output_labels = ['cent_x', 'cent_y']\n",
+    "output_labels = ['x1', 'y1', 'x2', 'y2']\n",
     "input_dim = len(input_labels)\n",
     "output_dim = len(output_labels)\n",
     "\n",
@@ -1977,30 +1977,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('circle_20200803T090234', 1),\n",
-       " ('line_20200803T122506', 1),\n",
-       " ('line_20200803T114942', 1),\n",
-       " ('circle_20200803T093051', 1),\n",
-       " ('line_20200803T094928', 1)]"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 252,
    "metadata": {},
    "outputs": [
@@ -2229,12 +2205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "('circle_20200803T120911', 1)",
+     "evalue": "'circle_20200803T090615'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
@@ -2244,22 +2220,22 @@
       "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: ('circle_20200803T120911', 1)",
+      "\u001b[0;31mKeyError\u001b[0m: 'circle_20200803T090615'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-359-5e91383e54de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-2c8fa9529644>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/miniconda/envs/py36/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2798\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2799\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2800\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2801\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2802\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/miniconda/envs/py36/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2646\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2647\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2648\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2649\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2650\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: ('circle_20200803T120911', 1)"
+      "\u001b[0;31mKeyError\u001b[0m: 'circle_20200803T090615'"
      ]
     }
    ],
    "source": [
-    "wh = all_df[train[0]]"
+    "wh = all_df[train[0][0]]"
    ]
   },
   {
@@ -2381,6 +2357,83 @@
    ],
    "source": [
     "plt.hist2d(wh.iloc[:, 0], wh.iloc[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 140.96625635,  602.05872013],\n",
+       "       [ 141.81566899,  604.73851986],\n",
+       "       [ 140.97292622,  602.73771008],\n",
+       "       ...,\n",
+       "       [1424.20682668,  318.63039149],\n",
+       "       [1417.16076397,  319.62604197],\n",
+       "       [1413.26894229,  320.28344478]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df[['x1', 'y1']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =np.expand_dims(np.array([[1,2],[2,3]]), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [2, 3]]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [2, 3]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.squeeze(0)"
    ]
   },
   {
